# UdemyCmake

2_CMake/HelloWorld/: CMakeLists.txt  Makefile  conanfile.py  vcpkg.json
2_CMake/HelloWorld/app/: CMakeLists.txt  main.cpp
2_CMake/HelloWorld/cmake/: AddGitSubmodule.cmake  Docs.cmake  LTO.cmake  Sanitizers.cmake  Warnings.cmake
2_CMake/HelloWorld/configured/: CMakeLists.txt  config.hpp.in
2_CMake/HelloWorld/src/my_lib/: CMakeLists.txt  my_lib.cpp  my_lib.h
2_CMake/HelloWorld/tests/: CMakeLists.txt  main.cpp
